new icon: BLUETTI

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -30,3 +30,6 @@ coloros_relax:
 
 finamtrade:
   - ru.finam.android/ru.finam.android.LauncherActivityAlias
+
+bluetti:
+  - net.poweroak.bluetticloud/net.poweroak.bluetticloud.ui.main.WelcomeActivity
