--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -33,3 +33,6 @@ finamtrade:
 
 bluetti:
   - net.poweroak.bluetticloud/net.poweroak.bluetticloud.ui.main.WelcomeActivity
+
+yami:
+  - com.yamibuy.yamiapp/com.AlchemyFramework.Activity.SplashActivity
