new icon: HeavensAbove

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -36,3 +36,6 @@ bluetti:
 
 yami:
   - com.yamibuy.yamiapp/com.AlchemyFramework.Activity.SplashActivity
+
+heavens_above:
+  - com.heavens_above.viewer/com.heavens_above.viewer.ViewerActivity
