--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,8 +8,40 @@
 #
 # new_icon_2_alt_1: {}
 #
+
 arattai:
    - com.aratai.chat/com.arattai.home.presentation.ui.HomeActivity
   
 doc_scanner:
    - com.zoho.android.documentscanner/com.zoho.android.documentscanner.activities.DocumentListActivity
+
+jodel:
+  - com.tellm.android.app/com.jodelapp.jodelandroidv3.view.LauncherActivity
+
+openscale:
+  - com.health.openscale.pro/com.health.openscale.gui.MainActivity
+
+cyanide_and_happiness:
+  - im.frantic.jokinghazard/host.exp.exponent.MainActivity
+
+indoasis:
+  - com.IndianBank.IndOASIS/com.IndianBank.IndOASIS.IndOASISPROD
+
+mi_app_vault:
+  - com.mi.android.globalminusscreen/com.mi.android.globalminusscreen.tab.MainActivity
+  - com.mi.globalminusscreen/com.mi.globalminusscreen.MainActivity
+
+coloros_relax:
+  - com.coloros.relax/com.coloros.relax.ui.MainActivity
+
+finamtrade:
+  - ru.finam.android/ru.finam.android.LauncherActivityAlias
+
+bluetti:
+  - net.poweroak.bluetticloud/net.poweroak.bluetticloud.ui.main.WelcomeActivity
+
+yami:
+  - com.yamibuy.yamiapp/com.AlchemyFramework.Activity.SplashActivity
+
+heavens_above:
+  - com.heavens_above.viewer/com.heavens_above.viewer.ViewerActivity
