--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -45,3 +45,6 @@ yami:
 
 heavens_above:
   - com.heavens_above.viewer/com.heavens_above.viewer.ViewerActivity
+
+daily_mail_online:
+  - com.dailymail.online/com.dailymail.online.presentation.splash.SplashActivity
