Add 9 new icons
* Zoho Calendar
* TB Checker
* ZMail Admin
* Zoho Books
* Zoho Cliq
* Zoho CRM
* Zoho Invoice
* Zoho People
* Zoho Projects

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,29 @@
 #
 # new_icon_2_alt_1: {}
 #
+calendar:
+   - com.zoho.android.calendar/com.zoho.android.calendar.ui.ZohoCalendarActivity
+
+tb_checker:
+   - krypton.tbsafetychecker/krypton.tbsafetychecker.main.MainActivity
+
+zmail_admin:
+   - com.zoho.mail.admin/com.zoho.mail.admin.views.activities.SplashScreenActivity
+
+zoho_books:
+   - com.zoho.books/com.zoho.invoice.launcher.MainActivity
+
+zoho_cliq:
+   - com.zoho.chat/com.zoho.chat.ui.MyBaseActivity
+
+zoho_crm:
+   - com.zoho.crm/com.zoho.crm.ZohoCRMActivity
+
+zoho_invoice:
+   - com.zoho.invoice/com.zoho.invoice.launcher.MainActivity
+
+zoho_people:
+   - com.zoho.people/com.zoho.people.home.HomeActivityForLauncher
+
+zoho_projects:
+   - com.zoho.projects/com.zoho.projects.android.activity.ZohoProjectsLogin
