--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,7 +8,7 @@
 #
 # new_icon_2_alt_1: {}
 #
-calendar:
+zoho_calendar:
    - com.zoho.android.calendar/com.zoho.android.calendar.ui.ZohoCalendarActivity
 
 tb_checker:
