--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,9 @@ spic:
 
 vault:
   - com.arsvechkarev.vault/com.arsvechkarev.vault.MainActivity
+
+ente_auth:
+  - io.ente.auth/io.ente.auth.MainActivity
+
+terminal:
+  - com.termux.nix/com.termux.app.TermuxActivity
