add icons & componentinfo (#734)
* add icons

* add componentinfo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,36 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+bettercounter:
+  - org.kde.bettercounter/org.kde.bettercounter.ui.MainActivity
+
+easysync:
+  - com.phpbg.easysync/com.phpbg.easysync.ui.MainActivity
+
+exch:
+  - io.github.pitonite.exch_cx/io.github.pitonite.exch_cx.MainActivity
+
+filebin:
+  - de.varakh.fbmobile/de.varakh.fbmobile.MainActivity
+
+iconeration:
+  - com.kaanelloed.iconeration/com.kaanelloed.iconeration.MainActivity
+
+ricochlime:
+  - com.adilhanney.ricochlime/com.adilhanney.ricochlime.MainActivity
+
+socksdroid:
+  - net.typeblog.socks/net.typeblog.socks.MainActivity
+
+spic:
+  - com.henrikherzig.playintegritychecker/com.henrikherzig.playintegritychecker.MainActivity
+
+vault:
+  - com.arsvechkarev.vault/com.arsvechkarev.vault.MainActivity
+
+ente_auth:
+  - io.ente.auth/io.ente.auth.MainActivity
+
+terminal:
+  - com.termux.nix/com.termux.app.TermuxActivity
