--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -95,3 +95,57 @@ timeplanner:
 
 yatoo:
   - com.paultirk.yatoo/com.paultirk.yatoo.MainActivity
+
+attendance_manager:
+  - com.vg.attendancemanager/com.vg.attendancemanager.MainActivity
+
+backblaze:
+  - com.backblaze.android/com.backblaze.android.activity.StartAuthActivity
+
+betterment:
+  - com.betterment/com.betterment.flutter.activity.EmbeddedFlutterActivity
+
+chatgpt_wrapper:
+  - com.matthaigh27.chatgptwrapper/com.matthaigh27.chatgptwrapper.MainActivity
+
+currency:
+  - org.billthefarmer.currency/org.billthefarmer.currency.Main
+
+despar_tribu:
+  - it.despar.despartribu/it.despar.despartribu.MainActivity
+
+docvault:
+  - com.os.docvault/com.coloros.oppodocvault.views.ftu.ui.FTUWelcomeActivity
+
+gps_test:
+  - com.chartcross.gpstest/com.chartcross.gpstest.MainActivity
+
+hallow:
+  - app.hallow.android/app.hallow.android.scenes.RouterActivity
+
+melodeon:
+  - org.billthefarmer.melodeon/org.billthefarmer.melodeon.MainActivity
+
+moe_memos:
+  - me.mudkip.moememos/me.mudkip.moememos.MainActivity
+
+netmeds:
+  - com.NetmedsMarketplace.Netmeds/com.netmedsmarketplace.netmeds.AppUriSchemeHandler
+
+octoapp:
+  - de.crysxd.octoapp/de.crysxd.octoapp.MainActivity
+
+pokemon_tcg_live:
+  - com.pokemon.pokemontcgl/com.pokemon.pokemontcgl.UnityPlayerActivity
+
+radar_weather:
+  - org.woheller69.weather/org.woheller69.weather.activities.SplashActivity
+
+sharex:
+  - com.akansh.fileserversuit/com.akansh.fileserversuit.Splash
+
+smartcookieweb:
+  - com.cookiegames.smartcookie/com.cookiegames.smartcookie.MainActivity
+
+trebedit:
+  - com.teejay.trebedit/com.teejay.trebedit.StartingActivity
