--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -66,3 +66,6 @@ the_souled_store:
 
 trendyol:
   - trendyol.com/com.trendyol.common.splash.impl.ui.SplashActivity
+
+linphone:
+  - org.linphone/org.linphone.activities.main.MainActivity
