new compinfo: SmartCookieWeb

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -69,3 +69,6 @@ trendyol:
 
 linphone:
   - org.linphone/org.linphone.activities.main.MainActivity
+
+smartcookieweb:
+  - com.cookiejarapps.android.smartcookieweb/com.cookiejarapps.android.smartcookieweb.BrowserActivity
