new compinfo: Turk Telekom

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -72,3 +72,6 @@ linphone:
 
 smartcookieweb:
   - com.cookiejarapps.android.smartcookieweb/com.cookiejarapps.android.smartcookieweb.BrowserActivity
+
+turk_telekom:
+  - com.tmob.AveaOIM/moim.android.init.SplashActivity
