new icon: Debitum

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -75,3 +75,6 @@ smartcookieweb:
 
 turk_telekom:
   - com.tmob.AveaOIM/moim.android.init.SplashActivity
+
+debitum:
+  - org.ebur.debitum/org.ebur.debitum.ui.MainActivity
