new icon: CV Project

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -78,3 +78,6 @@ turk_telekom:
 
 debitum:
   - org.ebur.debitum/org.ebur.debitum.ui.MainActivity
+
+cv_project:
+  - org.commonvoice.saverio/org.commonvoice.saverio.SplashScreen
