--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -81,3 +81,6 @@ debitum:
 
 cv_project:
   - org.commonvoice.saverio/org.commonvoice.saverio.SplashScreen
+
+boxberry:
+  - ru.boxberry.mobile/ru.handh.android.boxberry.ui.activity.MainActivity
