new icon: Citilink

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -84,3 +84,6 @@ cv_project:
 
 boxberry:
   - ru.boxberry.mobile/ru.handh.android.boxberry.ui.activity.MainActivity
+
+citilink:
+  - ru.citilink/ru.citilink.app.presentation.start.StartActivity
