new icon: К&Б (Красное&Белое)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -87,3 +87,6 @@ boxberry:
 
 citilink:
   - ru.citilink/ru.citilink.app.presentation.start.StartActivity
+
+kb:
+  - ru.napoleonit.kb/ru.napoleonit.kb.screens.root.RootActivity
