new icon: Stoloto

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -90,3 +90,6 @@ citilink:
 
 kb:
   - ru.napoleonit.kb/ru.napoleonit.kb.screens.root.RootActivity
+
+stoloto:
+  - ru.stoloto.mobile/ru.stoloto.mobile.feature_splash.ui.SplashActivity
