new icon: RUTUBE

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -93,3 +93,6 @@ kb:
 
 stoloto:
   - ru.stoloto.mobile/ru.stoloto.mobile.feature_splash.ui.SplashActivity
+
+rutube:
+  - ru.rutube.app/ru.rutube.app.ui.activity.splash.SplashActivity
