new icon: Amnezia VPN (+ Alt)

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -96,3 +96,8 @@ stoloto:
 
 rutube:
   - ru.rutube.app/ru.rutube.app.ui.activity.splash.SplashActivity
+
+amnezia_vpn:
+  - org.amnezia.vpn/org.amnezia.vpn.qt.VPNActivity
+
+amnezia_vpn_alt_1: {}
