--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -101,3 +101,6 @@ amnezia_vpn:
   - org.amnezia.vpn/org.amnezia.vpn.qt.VPNActivity
 
 amnezia_vpn_alt_1: {}
+
+stone_story_rpg:
+  - com.MartianRexInc.StoneStory/com.unity3d.player.UnityPlayerActivity
