new icon: My Banglalink

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -104,3 +104,6 @@ amnezia_vpn_alt_1: {}
 
 stone_story_rpg:
   - com.MartianRexInc.StoneStory/com.unity3d.player.UnityPlayerActivity
+
+my_banglalink:
+  - com.arena.banglalinkmela.app/com.arena.banglalinkmela.app.ui.splash.SplashActivity
