new icon: Call a Bike

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -107,3 +107,6 @@ stone_story_rpg:
 
 my_banglalink:
   - com.arena.banglalinkmela.app/com.arena.banglalinkmela.app.ui.splash.SplashActivity
+
+call_a_bike:
+  - de.bahn.callabike/de.bahn.callabike.CallABikeActivity
