new icon: TES Blades

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -110,3 +110,6 @@ my_banglalink:
 
 call_a_bike:
   - de.bahn.callabike/de.bahn.callabike.CallABikeActivity
+
+tes_blades:
+  - com.bethsoft.blade/com.bethesda.player.BgsPlayerActivity
