new icon: PETLIBRO

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -113,3 +113,6 @@ call_a_bike:
 
 tes_blades:
   - com.bethsoft.blade/com.bethesda.player.BgsPlayerActivity
+
+petlibro:
+  - com.dl.petlibro/com.smart.ThingSplashActivity
