new icon: Gauguin

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -116,3 +116,6 @@ tes_blades:
 
 petlibro:
   - com.dl.petlibro/com.smart.ThingSplashActivity
+
+gauguin:
+  - org.piepmeyer.gauguin/org.piepmeyer.gauguin.ui.main.MainActivity
