new icon: Airlock

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -119,3 +119,6 @@ petlibro:
 
 gauguin:
   - org.piepmeyer.gauguin/org.piepmeyer.gauguin.ui.main.MainActivity
+
+airlock:
+  - com.airlock.iam.a2fa/com.futurae.mobileapp.ui.home.HomeActivity
