new icon: BIGGBY Coffee

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -122,3 +122,6 @@ gauguin:
 
 airlock:
   - com.airlock.iam.a2fa/com.futurae.mobileapp.ui.home.HomeActivity
+
+biggby_coffee:
+  - com.biggby.app/io.gonative.android.SplashActivity
