new icon: NYU Mobile

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -125,3 +125,6 @@ airlock:
 
 biggby_coffee:
   - com.biggby.app/io.gonative.android.SplashActivity
+
+nyu_mobile:
+  - com.nyu.nyumobile/modolabs.kurogo.activity.ModuleActivity
