new icon: Nikon SnapBridge

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -128,3 +128,6 @@ biggby_coffee:
 
 nyu_mobile:
   - com.nyu.nyumobile/modolabs.kurogo.activity.ModuleActivity
+
+nikon_snapbridge:
+  - com.nikon.snapbridge.cmru/com.nikon.snapbridge.cmru.ui.init.NkLLicenceActivity
