--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -131,3 +131,6 @@ nyu_mobile:
 
 nikon_snapbridge:
   - com.nikon.snapbridge.cmru/com.nikon.snapbridge.cmru.ui.init.NkLLicenceActivity
+
+geev:
+  - fr.geev.application/fr.geev.application.presentation.activity.EntryPointActivity
