new icon: JKOPay

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -134,3 +134,6 @@ nikon_snapbridge:
 
 geev:
   - fr.geev.application/fr.geev.application.presentation.activity.EntryPointActivity
+
+jkopay:
+  - com.jkos.app/com.jkos.app.LoadActivity
