new icon: Next Bank

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -137,3 +137,6 @@ geev:
 
 jkopay:
   - com.jkos.app/com.jkos.app.LoadActivity
+
+next_bank:
+  - com.nextbank.ncbportal/com.nextbank.ncbportal.SplashScreenActivity
