new icon: Tyke Invest

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -140,3 +140,6 @@ jkopay:
 
 next_bank:
   - com.nextbank.ncbportal/com.nextbank.ncbportal.SplashScreenActivity
+
+tyke_invest:
+  - com.tykeinvest.tyke/com.tykeinvest.tyke.MainActivity
