--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -66,3 +66,80 @@ the_souled_store:
 
 trendyol:
   - trendyol.com/com.trendyol.common.splash.impl.ui.SplashActivity
+
+linphone:
+  - org.linphone/org.linphone.activities.main.MainActivity
+
+smartcookieweb:
+  - com.cookiejarapps.android.smartcookieweb/com.cookiejarapps.android.smartcookieweb.BrowserActivity
+
+turk_telekom:
+  - com.tmob.AveaOIM/moim.android.init.SplashActivity
+
+debitum:
+  - org.ebur.debitum/org.ebur.debitum.ui.MainActivity
+
+cv_project:
+  - org.commonvoice.saverio/org.commonvoice.saverio.SplashScreen
+
+boxberry:
+  - ru.boxberry.mobile/ru.handh.android.boxberry.ui.activity.MainActivity
+
+citilink:
+  - ru.citilink/ru.citilink.app.presentation.start.StartActivity
+
+kb:
+  - ru.napoleonit.kb/ru.napoleonit.kb.screens.root.RootActivity
+
+stoloto:
+  - ru.stoloto.mobile/ru.stoloto.mobile.feature_splash.ui.SplashActivity
+
+rutube:
+  - ru.rutube.app/ru.rutube.app.ui.activity.splash.SplashActivity
+
+amnezia_vpn:
+  - org.amnezia.vpn/org.amnezia.vpn.qt.VPNActivity
+
+amnezia_vpn_alt_1: {}
+
+stone_story_rpg:
+  - com.MartianRexInc.StoneStory/com.unity3d.player.UnityPlayerActivity
+
+my_banglalink:
+  - com.arena.banglalinkmela.app/com.arena.banglalinkmela.app.ui.splash.SplashActivity
+
+call_a_bike:
+  - de.bahn.callabike/de.bahn.callabike.CallABikeActivity
+
+tes_blades:
+  - com.bethsoft.blade/com.bethesda.player.BgsPlayerActivity
+
+petlibro:
+  - com.dl.petlibro/com.smart.ThingSplashActivity
+
+gauguin:
+  - org.piepmeyer.gauguin/org.piepmeyer.gauguin.ui.main.MainActivity
+
+airlock:
+  - com.airlock.iam.a2fa/com.futurae.mobileapp.ui.home.HomeActivity
+
+biggby_coffee:
+  - com.biggby.app/io.gonative.android.SplashActivity
+
+nyu_mobile:
+  - com.nyu.nyumobile/modolabs.kurogo.activity.ModuleActivity
+
+nikon_snapbridge:
+  - com.nikon.snapbridge.cmru/com.nikon.snapbridge.cmru.ui.init.NkLLicenceActivity
+
+geev:
+  - fr.geev.application/fr.geev.application.presentation.activity.EntryPointActivity
+
+jkopay:
+  - com.jkos.app/com.jkos.app.LoadActivity
+
+next_bank:
+  - com.nextbank.ncbportal/com.nextbank.ncbportal.SplashScreenActivity
+
+tyke_invest:
+  - com.tykeinvest.tyke/com.tykeinvest.tyke.MainActivity
