--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -143,3 +143,6 @@ next_bank:
 
 tyke_invest:
   - com.tykeinvest.tyke/com.tykeinvest.tyke.MainActivity
+
+uds:
+  - com.setinbox.game/com.setinbox.game.feature.start.StartActivity
