new icon: Tile Club

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -146,3 +146,6 @@ tyke_invest:
 
 uds:
   - com.setinbox.game/com.setinbox.game.feature.start.StartActivity
+
+tile_club:
+  - com.gamovation.tileclub/com.singular.unitybridge.SingularUnityActivity
