new icon: Friends Delivery

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -149,3 +149,6 @@ uds:
 
 tile_club:
   - com.gamovation.tileclub/com.singular.unitybridge.SingularUnityActivity
+
+friends_delivery:
+  - com.riselogic.dm.friendsekb/crc6476381ed2b82b4734.StartForm
