new icon: VPNArea

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -152,3 +152,6 @@ tile_club:
 
 friends_delivery:
   - com.riselogic.dm.friendsekb/crc6476381ed2b82b4734.StartForm
+
+vpnarea:
+  - com.vpnarea/de.blinkt.openvpn.area.feature.main.HomeActivity
