new icon: ShopeePay

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -155,3 +155,6 @@ friends_delivery:
 
 vpnarea:
   - com.vpnarea/de.blinkt.openvpn.area.feature.main.HomeActivity
+
+shopeepay:
+  - com.beeasy.toppay/com.airpay.login.splash.SplashActivity
