new icon: MOODA

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -158,3 +158,6 @@ vpnarea:
 
 shopeepay:
   - com.beeasy.toppay/com.airpay.login.splash.SplashActivity
+
+mooda:
+  - com.olivestonelab.mooda.android/com.olivestonelab.mooda.android.view.activity.MainActivity
