--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -161,3 +161,6 @@ shopeepay:
 
 mooda:
   - com.olivestonelab.mooda.android/com.olivestonelab.mooda.android.view.activity.MainActivity
+
+hse:
+  - de.hse24/de.hse24.app.activity.LaunchActivity
