new icon: ALDI UK

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -167,3 +167,6 @@ hse:
 
 vinyl_music_player:
   - souch.smp/souch.smp.Main
+
+aldi_uk:
+  - de.apptiv.business.android.aldi_uk/de.apptiv.business.android.aldi_uk.ui.activity.SplashActivity
