--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -170,3 +170,6 @@ vinyl_music_player:
 
 aldi_uk:
   - de.apptiv.business.android.aldi_uk/de.apptiv.business.android.aldi_uk.ui.activity.SplashActivity
+
+hema:
+  - nl.hema.mobiel/nl.hema.mobiel.ui.MainActivity
