new icon: Vision Digital

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -173,3 +173,6 @@ aldi_uk:
 
 hema:
   - nl.hema.mobiel/nl.hema.mobiel.ui.MainActivity
+
+vision_digital:
+  - com.visionbanco.mobile/com.visionbanco.mobile.WelcomeActivity
