new icon: Shikho

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -176,3 +176,6 @@ hema:
 
 vision_digital:
   - com.visionbanco.mobile/com.visionbanco.mobile.WelcomeActivity
+
+shikho:
+  - tech.shikho.android/tech.shikho.android.ui.feature.splash.SplashActivity
