--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -179,3 +179,6 @@ vision_digital:
 
 shikho:
   - tech.shikho.android/tech.shikho.android.ui.feature.splash.SplashActivity
+
+anc:
+  - ua.aptekanizkihcen/ua.aptekanizkihcen.ui.splash.SplashActivity
