new icon: Adda247

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -182,3 +182,6 @@ shikho:
 
 anc:
   - ua.aptekanizkihcen/ua.aptekanizkihcen.ui.splash.SplashActivity
+
+adda247:
+  - com.adda247.app/com.adda247.modules.home.HomeActivity
