new icon: Thermomix Cookidoo

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -185,3 +185,6 @@ anc:
 
 adda247:
   - com.adda247.app/com.adda247.modules.home.HomeActivity
+
+thermomix_cookidoo:
+  - com.vorwerk.cookidoo/com.cookidoo.android.presentation.splash.SplashScreenActivity
