--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -143,3 +143,48 @@ next_bank:
 
 tyke_invest:
   - com.tykeinvest.tyke/com.tykeinvest.tyke.MainActivity
+
+uds:
+  - com.setinbox.game/com.setinbox.game.feature.start.StartActivity
+
+tile_club:
+  - com.gamovation.tileclub/com.singular.unitybridge.SingularUnityActivity
+
+friends_delivery:
+  - com.riselogic.dm.friendsekb/crc6476381ed2b82b4734.StartForm
+
+vpnarea:
+  - com.vpnarea/de.blinkt.openvpn.area.feature.main.HomeActivity
+
+shopeepay:
+  - com.beeasy.toppay/com.airpay.login.splash.SplashActivity
+
+mooda:
+  - com.olivestonelab.mooda.android/com.olivestonelab.mooda.android.view.activity.MainActivity
+
+hse:
+  - de.hse24/de.hse24.app.activity.LaunchActivity
+
+vinyl_music_player:
+  - souch.smp/souch.smp.Main
+
+aldi_uk:
+  - de.apptiv.business.android.aldi_uk/de.apptiv.business.android.aldi_uk.ui.activity.SplashActivity
+
+hema:
+  - nl.hema.mobiel/nl.hema.mobiel.ui.MainActivity
+
+vision_digital:
+  - com.visionbanco.mobile/com.visionbanco.mobile.WelcomeActivity
+
+shikho:
+  - tech.shikho.android/tech.shikho.android.ui.feature.splash.SplashActivity
+
+anc:
+  - ua.aptekanizkihcen/ua.aptekanizkihcen.ui.splash.SplashActivity
+
+adda247:
+  - com.adda247.app/com.adda247.modules.home.HomeActivity
+
+thermomix_cookidoo:
+  - com.vorwerk.cookidoo/com.cookidoo.android.presentation.splash.SplashScreenActivity
