--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -188,3 +188,39 @@ adda247:
 
 thermomix_cookidoo:
   - com.vorwerk.cookidoo/com.cookidoo.android.presentation.splash.SplashScreenActivity
+
+adobe_account_access:
+  - com.adobe.ims.accountaccess/com.zoontek.rnbootsplash.RNBootSplashActivity
+
+beeper_mini:
+  - com.beeper.ima/com.beeper.chat.booper.MainActivity
+
+dexcom_clarity:
+  - com.dexcom.clarity.mobile/com.dexcom.clarity.mobile.activities.Authenticate
+
+dose:
+  - com.waseefakhtar.doseapp/com.waseefakhtar.doseapp.MainActivity
+
+i2pd:
+  - org.purplei2p.i2pd/org.purplei2p.i2pd.I2PDPermsAskerActivity
+
+music_league:
+  - com.musicleague.app/com.musicleague.app.MainActivity
+
+nyu_mobile:
+  - com.nyu.nyumobile/modolabs.kurogo.activity.ModuleActivity
+
+ombi:
+  - com.tidusjar.Ombi/com.tidusjar.Ombi.MainActivity
+
+package_name_viewer_2_0:
+  - com.csdroid.pkg/com.csdroid.pkg.MainActivity
+
+signal_generator:
+  - org.billthefarmer.siggen/org.billthefarmer.siggen.Main
+
+t2s:
+  - hesoft.T2S/hesoft.T2S.AppActivity
+
+unchained:
+  - com.github.livingwithhippos.unchained/com.github.livingwithhippos.unchained.base.MainActivity
