--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -224,3 +224,15 @@ t2s:
 
 unchained:
   - com.github.livingwithhippos.unchained/com.github.livingwithhippos.unchained.base.MainActivity
+
+beeper_mini:
+  - com.beeper.ima/com.beeper.chat.booper.MainActivity
+
+rez_launcher:
+  - com.perryoncrack.rez/com.perryoncrack.rez.MainActivity
+
+takan:
+  - io.skipday.takan/io.skipday.takan.ui.MainActivity
+
+lock_screen:
+  - rk.android.app.lockscreen/rk.android.app.lockscreen.activity.HomeActivity
