--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -224,3 +224,36 @@ t2s:
 
 unchained:
   - com.github.livingwithhippos.unchained/com.github.livingwithhippos.unchained.base.MainActivity
+
+bigin:
+- com.zoho.bigin/com.zoho.ignite.setup.splashscreen.SplashScreenActivity
+
+campaigns:
+- com.zoho.campaigns/com.zoho.campaigns.LauncherActivity
+
+creator:
+- com.zoho.creator.a/com.zoho.creator.a.SplashScreen
+
+qntrl:
+- com.zoho.blueprint/com.zoho.zohoflow.MainActivity
+
+show:
+- com.zoho.show.app/com.zoho.zohoshow.anzs.ShowListingActivity
+
+writer:
+- com.zoho.writer/com.zoho.writer.activity.LauncherActivity
+
+zoho_assist_customer:
+- com.zoho.assist.agent/com.zoho.assist.agent.activity.DialogActivity
+
+zoho_billing:
+- com.zoho.zsm/com.zoho.invoice.launcher.MainActivity
+
+zoho_expense:
+- com.zoho.expense/activities.MainActivity
+
+zoho_forms:
+- com.zoho.forms.a/com.zoho.forms.a.SplashScreen
+
+zoho_inventory:
+- com.zoho.inventory/com.zoho.invoice.launcher.MainActivity
