Update icon names

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -225,22 +225,22 @@ t2s:
 unchained:
   - com.github.livingwithhippos.unchained/com.github.livingwithhippos.unchained.base.MainActivity
 
-bigin:
+zoho_bigin:
   - com.zoho.bigin/com.zoho.ignite.setup.splashscreen.SplashScreenActivity
 
-campaigns:
+zoho_campaigns:
   - com.zoho.campaigns/com.zoho.campaigns.LauncherActivity
 
-creator:
+zoho_creator:
   - com.zoho.creator.a/com.zoho.creator.a.SplashScreen
 
-qntrl:
+zoho_qntrl:
   - com.zoho.blueprint/com.zoho.zohoflow.MainActivity
 
-show:
+zoho_show:
   - com.zoho.show.app/com.zoho.zohoshow.anzs.ShowListingActivity
 
-writer:
+zoho_writer:
   - com.zoho.writer/com.zoho.writer.activity.LauncherActivity
 
 zoho_assist_customer:
