--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -225,6 +225,69 @@ t2s:
 unchained:
   - com.github.livingwithhippos.unchained/com.github.livingwithhippos.unchained.base.MainActivity
 
+zoho_bigin:
+  - com.zoho.bigin/com.zoho.ignite.setup.splashscreen.SplashScreenActivity
+
+zoho_campaigns:
+  - com.zoho.campaigns/com.zoho.campaigns.LauncherActivity
+
+zoho_creator:
+  - com.zoho.creator.a/com.zoho.creator.a.SplashScreen
+
+zoho_qntrl:
+  - com.zoho.blueprint/com.zoho.zohoflow.MainActivity
+
+zoho_show:
+  - com.zoho.show.app/com.zoho.zohoshow.anzs.ShowListingActivity
+
+zoho_writer:
+  - com.zoho.writer/com.zoho.writer.activity.LauncherActivity
+
+zoho_assist_customer:
+  - com.zoho.assist.agent/com.zoho.assist.agent.activity.DialogActivity
+
+zoho_billing:
+  - com.zoho.zsm/com.zoho.invoice.launcher.MainActivity
+
+zoho_expense:
+  - com.zoho.expense/activities.MainActivity
+
+zoho_forms:
+  - com.zoho.forms.a/com.zoho.forms.a.SplashScreen
+
+zoho_inventory:
+  - com.zoho.inventory/com.zoho.invoice.launcher.MainActivity
+
+zoho_learn:
+  - com.zoho.learn/com.zoho.learn.activity.SplashScreenActivity
+
+zoho_meeting:
+  - com.zoho.meeting/com.zoho.meeting.view.activity.SplashActivity
+
+zoho_payroll:
+  - com.zoho.payroll/com.zoho.payroll.ui.launch.LauncherActivity
+
+zoho_sheet:
+  - com.zoho.sheet.android/com.zoho.sheet.android.doclisting.DocListingActivity
+
+zoho_social:
+  - com.zoho.zohosocial/com.zoho.zohosocial.login.view.RedirectingActivity
+
+zoho_sprints:
+  - com.zoho.sprints/com.zoho.sprints.MainActivity
+
+zoho_teaminbox:
+  - com.zoho.teaminbox/com.zoho.teaminbox.ui.SplashActivity
+
+zoho_todo:
+  - com.zoho.mail.task/com.zoho.mail.task.ui.activity.OnBoardingActivity
+
+zoho_vault:
+  - com.zoho.vault/com.zoho.vault.ui.login.WelcomeActivity
+
+zoho_webinar:
+  - com.zoho.webinar/com.zoho.webinar.view.activity.WebinarLaunchActivity
+
 beeper_mini:
   - com.beeper.ima/com.beeper.chat.booper.MainActivity
 
