--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -305,3 +305,6 @@ any:
 
 tsukis_odyssey:
   - com.hyperbeard.odyssey/com.unity3d.player.UnityPlayerActivity
+
+infinity:
+  - ml.docilealligator.infinityforreddit.patreon/ml.docilealligator.infinityforreddit.activities.MainActivity
