--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -299,3 +299,12 @@ takan:
 
 lock_screen:
   - rk.android.app.lockscreen/rk.android.app.lockscreen.activity.HomeActivity
+
+any:
+  - com.dokar.any/com.dokar.any.MainActivity
+
+tsukis_odyssey:
+  - com.hyperbeard.odyssey/com.unity3d.player.UnityPlayerActivity
+
+infinity:
+  - ml.docilealligator.infinityforreddit.patreon/ml.docilealligator.infinityforreddit.activities.MainActivity
