add missing compinfos

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,15 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+google_classroom:
+  - com.google.android.apps.classroom/com.google.android.apps.classroom.classroomflutter.MainActivity
+
+bible:
+  - com.sirma.mobile.bible.android/youversion.bible.app.MainActivity
+
+lg_thinq:
+  - com.lgeha.nuts/com.lgeha.nuts.DashboardActivity50
+
+nothing_weather:
+  - com.nothing.weather/com.nothing.weather.ui.main.MainActivity
