new icon: Blood Strike

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -20,3 +20,6 @@ lg_thinq:
 
 nothing_weather:
   - com.nothing.weather/com.nothing.weather.ui.main.MainActivity
+
+blood_strike:
+  - com.netease.newspike/com.netease.game.MessiahNativeActivity
