new icon: Monster Hunter Now

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -23,3 +23,6 @@ nothing_weather:
 
 blood_strike:
   - com.netease.newspike/com.netease.game.MessiahNativeActivity
+
+monster_hunter_now:
+  - com.nianticlabs.monsterhunter/com.nianticproject.magellan.MagellanUnityPlayerActivity
