icon link: QR Code Reader -> Scanner: QR Code and Products

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -26,3 +26,6 @@ blood_strike:
 
 monster_hunter_now:
   - com.nianticlabs.monsterhunter/com.nianticproject.magellan.MagellanUnityPlayerActivity
+
+qr_code_reader:
+  - com.atharok.barcodescanner/com.atharok.barcodescanner.presentation.views.activities.MainActivity
