new icon: Ground News

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -29,3 +29,6 @@ monster_hunter_now:
 
 qr_code_reader:
   - com.atharok.barcodescanner/com.atharok.barcodescanner.presentation.views.activities.MainActivity
+
+ground_news:
+  - com.checkitt/vc.ucic.SplashActivity
