--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -32,3 +32,6 @@ qr_code_reader:
 
 ground_news:
   - com.checkitt/vc.ucic.SplashActivity
+
+atak:
+  - com.atakmap.app.civ/com.atakmap.app.ATAKActivityCiv
