new icon: Skull-iQ

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -35,3 +35,6 @@ ground_news:
 
 atak:
   - com.atakmap.app.civ/com.atakmap.app.ATAKActivityCiv
+
+skull_iq:
+  - com.skullcandy.skulliq/com.bragi.earbuds.presentation.main.MainActivity
