--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -8,3 +8,33 @@
 #
 # new_icon_2_alt_1: {}
 #
+
+google_classroom:
+  - com.google.android.apps.classroom/com.google.android.apps.classroom.classroomflutter.MainActivity
+
+bible:
+  - com.sirma.mobile.bible.android/youversion.bible.app.MainActivity
+
+lg_thinq:
+  - com.lgeha.nuts/com.lgeha.nuts.DashboardActivity50
+
+nothing_weather:
+  - com.nothing.weather/com.nothing.weather.ui.main.MainActivity
+
+blood_strike:
+  - com.netease.newspike/com.netease.game.MessiahNativeActivity
+
+monster_hunter_now:
+  - com.nianticlabs.monsterhunter/com.nianticproject.magellan.MagellanUnityPlayerActivity
+
+qr_code_reader:
+  - com.atharok.barcodescanner/com.atharok.barcodescanner.presentation.views.activities.MainActivity
+
+ground_news:
+  - com.checkitt/vc.ucic.SplashActivity
+
+atak:
+  - com.atakmap.app.civ/com.atakmap.app.ATAKActivityCiv
+
+skull_iq:
+  - com.skullcandy.skulliq/com.bragi.earbuds.presentation.main.MainActivity
