--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -38,3 +38,33 @@ atak:
 
 skull_iq:
   - com.skullcandy.skulliq/com.bragi.earbuds.presentation.main.MainActivity
+
+bank_of_maldives:
+  - mv.com.bml.mib/mv.com.bml.mib.MainActivity
+
+cpu_x:
+  - com.abs.cpu_z_advance/com.abs.cpu_z_advance.MainActivity
+
+dailypay:
+  - com.DailyPay.DailyPay/com.DailyPay.DailyPay.MainActivity
+
+gps_logger:
+  - eu.basicairdata.graziano.gpslogger/eu.basicairdata.graziano.gpslogger.GPSActivity
+
+harveys:
+  - com.cara.harveys/com.cara.harveys.MainActivity
+
+kakaopay:
+  - com.kakaopay.app/com.kakaopay.app.main.PayMainActivity
+
+manchester_city_official_app:
+  - com.mancity/com.intive.mancityapp.android.splashscreen.SplashScreenActivity
+
+slash:
+  - com.slash.me/com.slash.me.presentation.splash.SplashActivity
+
+tacticool:
+  - com.panzerdog.tacticool/com.panzerdog.tacticool.androidtacticoolhelper.TacticoolActivity
+
+wwe:
+  - com.wwe.universe/axis.android.sdk.app.startup.ui.StartupActivity
