--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -75,11 +75,10 @@ jiomart:
 lenskart:
   - com.lenskart.app/com.lenskart.app.main.ui.SplashActivity
 
-mygov:
+mygov_india:
   - in.mygov.mobile/in.mygov.mobile.SplashActivity
 
-remnote:
-  - com.remnote.v2/com.remnote.v2.MainActivity
+remnote_alt_1: {}
 
 way2news:
   - sun.way2sms.hyd.com/sun.way2sms.hyd.com.way2news.activities.SplashActivity
