--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -78,6 +78,9 @@ lenskart:
 mygov_india:
   - in.mygov.mobile/in.mygov.mobile.SplashActivity
 
+remnote:
+  - com.remnote.v2/com.remnote.v2.MainActivity
+
 remnote_alt_1: {}
 
 way2news:
