Add new icons (#747)
* Add new icons

* bigin
* campaigns
* creator
* qntrl
* show
* writer
* zoho_assist_customer
* zoho_billing
* zoho_expense
* zoho_forms
* zoho_inventory

* Add new icons

* zoho_learn
* zoho_meeting
* zoho_payroll
* zoho_sheet
* zoho_social
* zoho_sprints
* zoho_teaminbox
* zoho_todo
* zoho_vault
* zoho_webinar

* Fix 2 icons

	modified:   app/src/main/res/drawable-nodpi/arattai.png
	modified:   app/src/main/res/drawable-nodpi/oneauth.png
	modified:   resources/vectors/arattai.svg
	modified:   resources/vectors/oneauth.svg

* Update icon names

* Add new icons

* jiomart
* lenskart
* mygov
* remnote
* way2news
* zoho_assist
* zoho_connect
* zoho_one

* Update icons

* change color to match with other zoho icons

	modified:   app/src/main/res/drawable-nodpi/zoho_desk.png
	modified:   app/src/main/res/drawable-nodpi/zoho_workdrive.png
	modified:   resources/vectors/zoho_desk.svg
	modified:   resources/vectors/zoho_workdrive.svg

* fix indents

* Update new_icons.yaml

* Update new_icons.yaml

---------

Co-authored-by: Evgeny <mail@hexed.pw>

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -68,3 +68,29 @@ tacticool:
 
 wwe:
   - com.wwe.universe/axis.android.sdk.app.startup.ui.StartupActivity
+
+jiomart:
+  - com.jpl.jiomart/com.jpl.jiomartsdk.dashboard.activities.SplashActivityAlias1
+
+lenskart:
+  - com.lenskart.app/com.lenskart.app.main.ui.SplashActivity
+
+mygov_india:
+  - in.mygov.mobile/in.mygov.mobile.SplashActivity
+
+remnote:
+  - com.remnote.v2/com.remnote.v2.MainActivity
+
+remnote_alt_1: {}
+
+way2news:
+  - sun.way2sms.hyd.com/sun.way2sms.hyd.com.way2news.activities.SplashActivity
+
+zoho_assist:
+  - com.zoho.assist/com.zoho.assist.ui.landing.view.LandingPageActivity
+
+zoho_connect:
+  - com.zoho.zohopulse/com.zoho.zohopulse.main.SplashActivity
+
+zoho_one:
+  - com.zoho.zohoone/com.zoho.zohoone.splash.SplashScreenActivity
