--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -94,3 +94,36 @@ zoho_connect:
 
 zoho_one:
   - com.zoho.zohoone/com.zoho.zohoone.splash.SplashScreenActivity
+
+asgardius_s3manager:
+  - asgardius.page.s3manager/asgardius.page.s3manager.MainActivity
+
+asgardius_s3music:
+  - asgardius.page.s3music/asgardius.page.s3music.MainActivity
+
+chubby_click:
+  - agrigolo.chubbyclick/agrigolo.chubbyclick.MainActivity
+
+deadhash:
+  - com.codedead.deadhash/com.codedead.deadhash.gui.MainActivity
+
+flux_news:
+  - de.circle_dev.flux_news/de.circle_dev.flux_news.MainActivity
+
+gyawun:
+  - com.jhelum.gyawun/com.ryanheise.audioservice.AudioServiceActivity
+
+next_actualites_informatiques:
+  - com.pcinpact/com.pcinpact.ListeArticlesActivity
+
+nikke:
+  - com.proximabeta.nikke/com.shiftup.nk.MainActivity
+
+smartmouse:
+  - ch.virt.smartphonemouse/ch.virt.smartphonemouse.MainActivity
+
+soundcrowd:
+  - com.tiefensuche.soundcrowd/com.tiefensuche.soundcrowd.ui.MusicPlayerActivity
+
+untracker:
+  - me.zhanghai.android.untracker/me.zhanghai.android.untracker.MainActivity
