--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -157,3 +157,24 @@ umang:
 
 youreka:
   - com.synaptic.yourekamobile/com.salesforce.androidsdk.phonegap.ui.SalesforceDroidGapActivity
+
+ather:
+  - com.athermobileapp/com.athermobileapp.SplashActivity
+
+cambly:
+  - com.cambly.cambly/com.cambly.featuredump.MainActivity
+
+gpslogger:
+  - com.mendhak.gpslogger/com.mendhak.gpslogger.GpsMainActivity
+
+hero_app:
+  - com.customerapp.hero/com.customerapp.hero.views.activity.splash.SplashActivity
+
+shopsy:
+  - com.flipkart.shopsy/com.flipkart.shopsy.SplashActivity
+
+tangedco:
+  - com.tneb.tangedco/com.tneb.tangedco.TangedcoSplashActivity
+
+tnepds:
+  - com.omneAgate.PublicApp.activity/com.omneAgate.PublicApp.activity.EntryActivity
