--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -178,3 +178,18 @@ tangedco:
 
 tnepds:
   - com.omneAgate.PublicApp.activity/com.omneAgate.PublicApp.activity.EntryActivity
+
+air_india:
+  - com.bets.airindia.ui/com.bets.airindia.ui.ui.MainActivity
+
+emirates_airlines:
+  - com.emirates.ek.android/com.emirates.startup.StartupActivity
+
+klm_airlines:
+  - com.afklm.mobile.android.gomobile.klm/com.airfrance.android.totoro.homepage.activity.MainActivity
+
+spirit_airlines:
+  - com.spirit.customerapp/com.spirit.enterprise.guestmobileapp.ui.main.LandingActivity
+
+vistara_airlines:
+  - com.vistara.tsal/com.vistara.tsal.activitysplash.SplashActivity
