--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -193,3 +193,30 @@ spirit_airlines:
 
 vistara_airlines:
   - com.vistara.tsal/com.vistara.tsal.activitysplash.SplashActivity
+
+bunq:
+  - com.bunq.android/com.bunq.android.ui.activity.SplashScreenActivity
+
+cyberalerty_niebezpiecznik:
+  - com.cyberalerty/com.cyberalerty.MainActivity
+
+highway_game:
+  - com.AKStudio.HighwayGame/com.unity3d.player.UnityPlayerActivity
+
+imslp:
+  - com.imslp.app/com.imslp.app.presentation.splash.SplashActivity
+
+pixelify_gphotos:
+  - balti.xposed.pixelifygooglephotos/balti.xposed.pixelifygooglephotos.ActivityMain
+
+rarevision_vhs:
+  - com.rarevision.vhscamcorder/com.rarevision.vhscommon.VhsCam
+
+symantec_vip:
+  - com.verisign.mvip.main/com.verisign.mvip.main.MainActivity
+
+tgramhooks:
+  - com.simo.tgramhooks/com.simo.tgramhooks.splash
+
+zfont_3:
+  - com.htetznaing.zfont2/com.htetznaing.zfont2.ui.StartingActivity
