add icon, replace another

--- a/resources/new_icons.yaml
+++ b/resources/new_icons.yaml
@@ -220,3 +220,6 @@ tgramhooks:
 
 zfont_3:
   - com.htetznaing.zfont2/com.htetznaing.zfont2.ui.StartingActivity
+
+flixclusive:
+  - com.flixclusive/com.flixclusive.presentation.mobile.main.MainActivity
